--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+#__pycache__/
+#*.py[cod]
+#*$py.class
 
 #vim
 *.py~
@@ -11,7 +11,7 @@ __pycache__/
 .dropbox
 
 #txt
-*.txt
+#*.txt
 
 # C extensions
 *.so
